# 2025.2-front-onboard_API

./: .dockerignore  .gitattributes  .hadolint.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
infra/: dev.docker-compose.yaml
infra/nginx/: Dockerfile  app.conf.template  nginx.conf
infra/nginx/pages/: 404.html  50x.html
infra/scripts/: no_commit_to_master.sh  run.sh
src/: conftest.py
src/api/: changelog_view.py  filters.py  pagination.py
src/api/management/commands/: devsetup.py
src/api/v1/: urls.py
src/authentication/: backends.py  models.py  serializers.py  urls.py  views.py
src/authentication/management/commands/: devsetup_1.py
src/authentication/migrations/: 0001_initial.py
src/authentication/tests/: api_tests.py  factories.py  model_tests.py
src/config/: urls.py
src/config/settings/: __init__.py  api.py  apps.py  auth.py  base.py  connection.py  database.py  email.py  logs.py  media.py  senfio.py  sms.py  static.py  whatsapp.py
src/coupons/: models.py  serializers.py  urls.py  views.py
src/coupons/management/commands/: devsetup_2.py
src/coupons/migrations/: 0001_initial.py
src/coupons/tests/: api_tests.py  factories.py  model_tests.py
src/shared/: formatters.py  patterns.py  validators.py
src/shared/api/: authentications.py  doc.py  exception_handler.py  handlers.py  serializers.py  validators.py
src/shared/exceptions/: __init__.py  base.py  dependencies.py  entities.py  integrity.py  nutcracker.py  permissions.py  queries.py  sms.py  tag_links.py
src/shared/models/: __init__.py  base.py  deactivate.py  validators.py
src/shared/tests/: formatters_tests.py  validators_tests.py
